change playlist style(texts to right), change mp3 files & thumbnail names(remove 75x75), add both medium & large layouts for larger screen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </audio>
             <div id="player" class="is-playing">
                 <div id="visual">
-                    <img src="/media/img/twice500.jpeg" alt="track name" />
+                    <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" />
                     <div id="audio-animation"></div>
                 </div>
                 <div id="title">
@@ -74,9 +74,9 @@
         <section id="playerList-area">
             <p id="list-title">Playlist</p>
             <ul id="songList">
-                <li>
+                <li class="active">
                     <div id="songList-cover">
-                        <img src="/media/img/itzy75.jpeg" alt="track name" />
+                        <img src="/media/img/ITZY-WANNABE.jpeg" alt="track name" />
                         <div id="audio-animation"></div>
                     </div>
                     <div id="songList-text">
@@ -84,9 +84,9 @@
                         <p id="songList-artist">ITZY</p>
                     </div>
                 </li>
-                <li>
+                <li class="active">
                     <div id="songList-cover">
-                        <img src="/media/img/lisa75.jpeg" alt="track name" />
+                        <img src="/media/img/LISA-MONEY.jpeg" alt="track name" />
                         <div id="audio-animation"></div>
                     </div>
                     <div id="songList-text">
@@ -94,9 +94,9 @@
                         <p id="songList-artist">LISA</p>
                     </div>
                 </li>
-                <li>
+                <li class="active">
                     <div id="songList-cover">
-                        <img src="/media/img/blackpink75.jpeg" alt="track name" />
+                        <img src="/media/img/BLACKPINK-DDU-DU DDU-DU.jpeg" alt="track name" />
                         <div id="audio-animation"></div>
                     </div>
                     <div id="songList-text">
@@ -104,9 +104,9 @@
                         <p id="songList-artist">BLACKPINK</p>
                     </div>
                 </li>
-                <li>
+                <li class="active">
                     <div id="songList-cover">
-                        <img src="/media/img/iu75.jpeg" alt="track name" />
+                        <img src="/media/img/IU-LILAC.jpeg" alt="track name" />
                         <div id="audio-animation"></div>
                     </div>
                     <div id="songList-text">
@@ -114,9 +114,9 @@
                         <p id="songList-artist">IU</p>
                     </div>
                 </li>
-                <li>
+                <li class="active">
                     <div id="songList-cover">
-                        <img src="/media/img/bts75.jpeg" alt="track name" />
+                        <img src="/media/img/BTS-Butter.jpeg" alt="track name" />
                         <div id="audio-animation"></div>
                     </div>
                     <div id="songList-text">
@@ -124,9 +124,9 @@
                         <p id="songList-artist">BTS</p>
                     </div>
                 </li>
-                <li>
+                <li class="active">
                     <div id="songList-cover">
-                        <img src="/media/img/twice75.jpeg" alt="track name" />
+                        <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" />
                         <div id="audio-animation"></div>
                     </div>
                     <div id="songList-text">
