rename control.js to songs.js, add app.js, link both js files to html file.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
             </ol>
         </section>
     </main>
+    <script src="js/app.js" defer></script>
+    <script src="js/songs.js" defer></script>
 </body>
 
 </html>
