--- a/index.html
+++ b/index.html
@@ -22,12 +22,28 @@
             </audio>
             <div id="player" class="is-playing">
                 <div id="track-cover"> <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" /></div>
-                <div id="visual">
-                    <p>The visualizer goes here</p>
-                </div>
-                <div id="title">
-                    <p id="song-title">The Feels</p>
-                    <p id="artist">Twice</p>
+                <div id="track-visual">
+                    <div id="title">
+                        <p id="song-title">The Feels</p>
+                        <p id="artist">Twice</p>
+                    </div>
+                    <div id="visual">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 45 20"
+                            style="enable-background:new 0 0 45 20;" xml:space="preserve">
+                            <g>
+                                <rect id="r-9" x="39.6" y="15.9" class="st0" width="4.4" height="3.2" />
+                                <rect id="r-8" x="34.7" y="12.7" class="st0" width="4.4" height="6.5" />
+                                <rect id="r-7" x="29.9" y="2.4" class="st0" width="4.4" height="16.7" />
+                                <rect id="r-6" x="25.1" y="6.2" class="st0" width="4.4" height="13" />
+                                <rect id="r-5" x="20.3" y="10" class="st0" width="4.4" height="9.2" />
+                                <rect id="r-4" x="15.5" y="0.8" class="st0" width="4.4" height="18.4" />
+                                <rect id="r-3" x="10.7" y="4.9" class="st0" width="4.4" height="14.3" />
+                                <rect id="r-2" x="5.8" y="10.9" class="st0" width="4.4" height="8.3" />
+                                <rect id="r-1" x="1" y="16.4" class="st0" width="4.4" height="2.7" />
+                            </g>
+                        </svg>
+                    </div>
                 </div>
                 <div id="timer">
                     <input type="range" value="0" min="" max=""></input>
@@ -76,7 +92,7 @@
         <section id="playerList-area">
             <p id="list-title">Playlist</p>
             <ol id="songList">
-                <li class="active">
+                <li id="songList-item" class="active">
                     <div id="songList-cover">
                         <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" />
                     </div>
@@ -85,7 +101,7 @@
                         <p id="songList-artist">Twice</p>
                     </div>
                 </li>
-                <li class="active">
+                <li id="songList-item" class="active">
                     <div id="songList-cover">
                         <img src="/media/img/LISA-MONEY.jpeg" alt="track name" />
                     </div>
@@ -94,7 +110,7 @@
                         <p id="songList-artist">LISA</p>
                     </div>
                 </li>
-                <li class="active">
+                <li id="songList-item" class="active">
                     <div id="songList-cover">
                         <img src="/media/img/BLACKPINK-DDU-DU DDU-DU.jpeg" alt="track name" />
                     </div>
@@ -103,7 +119,7 @@
                         <p id="songList-artist">BLACKPINK</p>
                     </div>
                 </li>
-                <li class="active">
+                <li id="songList-item" class="active">
                     <div id="songList-cover">
                         <img src="/media/img/IU-LILAC.jpeg" alt="track name" />
                     </div>
@@ -112,7 +128,7 @@
                         <p id="songList-artist">IU</p>
                     </div>
                 </li>
-                <li class="active">
+                <li id="songList-item" class="active">
                     <div id="songList-cover">
                         <img src="/media/img/BTS-Butter.jpeg" alt="track name" />
                     </div>
@@ -121,7 +137,7 @@
                         <p id="songList-artist">BTS</p>
                     </div>
                 </li>
-                <li class="active">
+                <li id="songList-item" class="active">
                     <div id="songList-cover">
                         <img src="/media/img/ITZY-WANNABE.jpeg" alt="track name" />
                     </div>
