add functions to change the play/pause button(auto hide one of them)

--- a/index.html
+++ b/index.html
@@ -63,13 +63,8 @@
                             replay_10
                         </span>
                     </button>
-                    <button id="btnPlay" class="buttons">
-                        <span class="material-icons">play_arrow</span>
-                    </button>
-                    <button id="pause" class="buttons">
-                        <span class="material-icons">
-                            pause
-                        </span>
+                    <button class="buttons">
+                        <span id="btnPlay" class="material-icons">play_arrow</span>
                     </button>
                     <button id="stop" class="buttons">
                         <span class="material-icons">
