add a function that gives a highlight when user select a song

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section id="playerList-area">
             <p id="list-title">Playlist</p>
             <ol id="songList">
-                <li id="songList-item" class="active">
+                <li id="songList-item" class="song active">
                     <div id="songList-cover">
                         <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" />
                     </div>
@@ -96,7 +96,7 @@
                         <p id="songList-artist">Twice</p>
                     </div>
                 </li>
-                <li id="songList-item" class="active">
+                <li id="songList-item" class="song">
                     <div id="songList-cover">
                         <img src="/media/img/LISA-MONEY.jpeg" alt="track name" />
                     </div>
@@ -105,7 +105,7 @@
                         <p id="songList-artist">LISA</p>
                     </div>
                 </li>
-                <li id="songList-item" class="active">
+                <li id="songList-item" class="song">
                     <div id="songList-cover">
                         <img src="/media/img/BLACKPINK-DDU-DU DDU-DU.jpeg" alt="track name" />
                     </div>
@@ -114,7 +114,7 @@
                         <p id="songList-artist">BLACKPINK</p>
                     </div>
                 </li>
-                <li id="songList-item" class="active">
+                <li id="songList-item" class="song">
                     <div id="songList-cover">
                         <img src="/media/img/IU-LILAC.jpeg" alt="track name" />
                     </div>
@@ -123,7 +123,7 @@
                         <p id="songList-artist">IU</p>
                     </div>
                 </li>
-                <li id="songList-item" class="active">
+                <li id="songList-item" class="song">
                     <div id="songList-cover">
                         <img src="/media/img/BTS-Butter.jpeg" alt="track name" />
                     </div>
@@ -132,7 +132,7 @@
                         <p id="songList-artist">BTS</p>
                     </div>
                 </li>
-                <li id="songList-item" class="active">
+                <li id="songList-item" class="song">
                     <div id="songList-cover">
                         <img src="/media/img/ITZY-WANNABE.jpeg" alt="track name" />
                     </div>
