add a function that can play and stop the visualizer by clicking the buttons

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 45 20"
                             style="enable-background:new 0 0 45 20;" xml:space="preserve">
                             <g>
-                                <rect id="r-9" x="39.6" y="15.9" class="st0" width="4.4" height="3.2" />
-                                <rect id="r-8" x="34.7" y="12.7" class="st0" width="4.4" height="6.5" />
-                                <rect id="r-7" x="29.9" y="2.4" class="st0" width="4.4" height="16.7" />
-                                <rect id="r-6" x="25.1" y="6.2" class="st0" width="4.4" height="13" />
-                                <rect id="r-5" x="20.3" y="10" class="st0" width="4.4" height="9.2" />
-                                <rect id="r-4" x="15.5" y="0.8" class="st0" width="4.4" height="18.4" />
-                                <rect id="r-3" x="10.7" y="4.9" class="st0" width="4.4" height="14.3" />
-                                <rect id="r-2" x="5.8" y="10.9" class="st0" width="4.4" height="8.3" />
-                                <rect id="r-1" x="1" y="16.4" class="st0" width="4.4" height="2.7" />
+                                <rect class="r-9" x="39.6" y="15.9" class="st0" width="4.4" height="3.2" />
+                                <rect class="r-8" x="34.7" y="12.7" class="st0" width="4.4" height="6.5" />
+                                <rect class="r-7" x="29.9" y="2.4" class="st0" width="4.4" height="16.7" />
+                                <rect class="r-6" x="25.1" y="6.2" class="st0" width="4.4" height="13" />
+                                <rect class="r-5" x="20.3" y="10" class="st0" width="4.4" height="9.2" />
+                                <rect class="r-4" x="15.5" y="0.8" class="st0" width="4.4" height="18.4" />
+                                <rect class="r-3" x="10.7" y="4.9" class="st0" width="4.4" height="14.3" />
+                                <rect class="r-2" x="5.8" y="10.9" class="st0" width="4.4" height="8.3" />
+                                <rect class="r-1" x="1" y="16.4" class="st0" width="4.4" height="2.7" />
                             </g>
                         </svg>
                     </div>
