Clean all files' code, add a few new objects and comments

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </header>
     <main>
         <section id="player-area">
-            <audio id="song-player" controls>
-                Your browser does not support the
-                <code>audio</code> element.
-            </audio>
             <div id="player" class="is-playing">
+                <audio id="audio-player" controls>
+                    Your browser does not support the
+                    <code>audio</code> element.
+                </audio>
                 <div id="track-cover"> <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" /></div>
                 <div id="track-visual">
                     <div id="title">
