Display the thumbnail image in the player for the currently playing track, add a function that can select and play song on the playlist

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Your browser does not support the
                     <code>audio</code> element.
                 </audio>
-                <div id="track-cover"> <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" /></div>
+                <div> <img id="track-cover" src="/media/img/TWICE-The Feels.jpeg" alt="track name" /></div>
                 <div id="track-visual">
                     <div id="title">
                         <p id="song-title">The Feels</p>
@@ -92,7 +92,7 @@
                         <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
-                        <p id="songList-title">The Feels</p>
+                        <p id="songList-title" class="songList-title">The Feels</p>
                         <p id="songList-artist">Twice</p>
                     </div>
                 </li>
@@ -101,7 +101,7 @@
                         <img src="/media/img/LISA-MONEY.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
-                        <p id="songList-title">MONEY</p>
+                        <p id="songList-title" class="songList-title">MONEY</p>
                         <p id="songList-artist">LISA</p>
                     </div>
                 </li>
@@ -110,7 +110,7 @@
                         <img src="/media/img/BLACKPINK-DDU-DU DDU-DU.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
-                        <p id="songList-title">DDU-DU DDU-DU</p>
+                        <p id="songList-title" class="songList-title">DDU-DU DDU-DU</p>
                         <p id="songList-artist">BLACKPINK</p>
                     </div>
                 </li>
@@ -119,7 +119,7 @@
                         <img src="/media/img/IU-LILAC.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
-                        <p id="songList-title">LILAC</p>
+                        <p id="songList-title" class="songList-title">LILAC</p>
                         <p id="songList-artist">IU</p>
                     </div>
                 </li>
@@ -128,7 +128,7 @@
                         <img src="/media/img/BTS-Butter.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
-                        <p id="songList-title">Butter</p>
+                        <p id="songList-title" class="songList-title">Butter</p>
                         <p id="songList-artist">BTS</p>
                     </div>
                 </li>
@@ -137,7 +137,7 @@
                         <img src="/media/img/ITZY-WANNABE.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
-                        <p id="songList-title">WANNABE</p>
+                        <p id="songList-title" class="songList-title">WANNABE</p>
                         <p id="songList-artist">ITZY</p>
                     </div>
                 </li>
