change media paths, add progress bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>media player</title>
+    <title>Media Player</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
                     Your browser does not support the
                     <code>audio</code> element.
                 </audio>
-                <div> <img id="track-cover" src="/media/img/TWICE-The Feels.jpeg" alt="track name" /></div>
+                <div> <img id="track-cover" src="media/img/twice-the-feels.jpeg" alt="track name" /></div>
                 <div id="track-visual">
                     <div id="title">
                         <p id="song-title">The Feels</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div id="timer">
-                    <input type="range" value="0" min="" max=""></input>
+                    <progress id="progressBar" value="0" min="0" max="100"></progress>
                     <div id="time">
                         <time id="current-time">00:00</time>
                         <time id="total-time">00:00</time>
@@ -89,7 +89,7 @@
             <ol id="songList">
                 <li id="songList-item" class="song active">
                     <div id="songList-cover">
-                        <img src="/media/img/TWICE-The Feels.jpeg" alt="track name" />
+                        <img src="media/img/twice-the-feels.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
                         <p id="songList-title" class="songList-title">The Feels</p>
@@ -98,7 +98,7 @@
                 </li>
                 <li id="songList-item" class="song">
                     <div id="songList-cover">
-                        <img src="/media/img/LISA-MONEY.jpeg" alt="track name" />
+                        <img src="media/img/lisa-money.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
                         <p id="songList-title" class="songList-title">MONEY</p>
@@ -107,7 +107,7 @@
                 </li>
                 <li id="songList-item" class="song">
                     <div id="songList-cover">
-                        <img src="/media/img/BLACKPINK-DDU-DU DDU-DU.jpeg" alt="track name" />
+                        <img src="media/img/blackpink-ddu-du-ddu-du.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
                         <p id="songList-title" class="songList-title">DDU-DU DDU-DU</p>
@@ -116,7 +116,7 @@
                 </li>
                 <li id="songList-item" class="song">
                     <div id="songList-cover">
-                        <img src="/media/img/IU-LILAC.jpeg" alt="track name" />
+                        <img src="media/img/iu-lilac.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
                         <p id="songList-title" class="songList-title">LILAC</p>
@@ -125,7 +125,7 @@
                 </li>
                 <li id="songList-item" class="song">
                     <div id="songList-cover">
-                        <img src="/media/img/BTS-Butter.jpeg" alt="track name" />
+                        <img src="media/img/bts-butter.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
                         <p id="songList-title" class="songList-title">Butter</p>
@@ -134,7 +134,7 @@
                 </li>
                 <li id="songList-item" class="song">
                     <div id="songList-cover">
-                        <img src="/media/img/ITZY-WANNABE.jpeg" alt="track name" />
+                        <img src="media/img/itzy-wannabe.jpeg" alt="track name" />
                     </div>
                     <div id="songList-text">
                         <p id="songList-title" class="songList-title">WANNABE</p>
