change player background colour, fix contrast errors

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <main>
         <section id="player-area">
             <div id="player" class="is-playing">
-                <audio id="audio-player" controls>
-                    Your browser does not support the
-                    <code>audio</code> element.
+                <audio id="audio-player">
                 </audio>
                 <div> <img id="track-cover" src="media/img/twice-the-feels.jpeg" alt="track name" /></div>
                 <div id="track-visual">
