create a switch case function, merge all buttons listeners to one controls listener

--- a/index.html
+++ b/index.html
@@ -51,31 +51,31 @@
                     </div>
                 </div>
                 <div id="controls">
-                    <button id="skip_previous" class="buttons">
-                        <span class="material-icons">
+                    <button class="buttons">
+                        <span id="skip_previous" class="material-icons">
                             skip_previous
                         </span>
                     </button>
-                    <button id="replay_10" class="buttons">
-                        <span class="material-icons">
+                    <button class="buttons">
+                        <span id="replay_10" class="material-icons">
                             replay_10
                         </span>
                     </button>
                     <button class="buttons">
                         <span id="btnPlay" class="material-icons">play_arrow</span>
                     </button>
-                    <button id="stop" class="buttons">
-                        <span class="material-icons">
+                    <button class="buttons">
+                        <span id="stop" class="material-icons">
                             stop
                         </span>
                     </button>
-                    <button id="forward_10" class="buttons">
-                        <span class="material-icons">
+                    <button class="buttons">
+                        <span id="forward_10" class="material-icons">
                             forward_10
                         </span>
                     </button>
-                    <button id="skip_next" class="buttons">
-                        <span class="material-icons">
+                    <button class="buttons">
+                        <span id="skip_next" class="material-icons">
                             skip_next
                         </span>
                     </button>
