rework the provious functon, change the size of playlist,track image and animation

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div id="controls">
                     <button class="buttons">
-                        <span id="skip_previous" class="material-icons">
+                        <span id="skip_previous" class="material-icons md-48">
                             skip_previous
                         </span>
                     </button>
