change the control buttons size to 40x40px

--- a/index.html
+++ b/index.html
@@ -52,30 +52,30 @@
                 </div>
                 <div id="controls">
                     <button class="buttons">
-                        <span id="skip_previous" class="material-icons md-48">
+                        <span id="skip_previous" class="material-icons md-40">
                             skip_previous
                         </span>
                     </button>
                     <button class="buttons">
-                        <span id="replay_10" class="material-icons">
+                        <span id="replay_10" class="material-icons md-40">
                             replay_10
                         </span>
                     </button>
                     <button class="buttons">
-                        <span id="btnPlay" class="material-icons">play_arrow</span>
+                        <span id="btnPlay" class="material-icons md-40">play_arrow</span>
                     </button>
                     <button class="buttons">
-                        <span id="stop" class="material-icons">
+                        <span id="stop" class="material-icons md-40">
                             stop
                         </span>
                     </button>
                     <button class="buttons">
-                        <span id="forward_10" class="material-icons">
+                        <span id="forward_10" class="material-icons md-40">
                             forward_10
                         </span>
                     </button>
                     <button class="buttons">
-                        <span id="skip_next" class="material-icons">
+                        <span id="skip_next" class="material-icons md-40">
                             skip_next
                         </span>
                     </button>
