fixed player based on feeback, add ol tag into html, fix the bigger screen's layout, change some space

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             </div>
         </section>
         <section id="playerList-area">
+            <ol id="songList"></ol>
         </section>
     </main>
     <script src="js/app.js" defer></script>
