add mute/unmute button to the player

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 
 <body>
-    <header>
-        <h1>sun00120</h1>
+    <header class="header">
+        <h1>JsPlayer</h1>
+        <button class="buttons">
+            <span id="mute" class="material-icons md-40">
+                volume_up
+            </span>
+        </button>
     </header>
     <main>
         <section id="player-area">
